crates/ink/tests/ui/contract/fail/trait-message-selector-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/trait-message-selector-mismatch.rs:23:9
   |
23 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ expected `1_u32`, found `2_u32`
   |
   = note: expected struct `TraitMessageSelector<1_u32>`
              found struct `TraitMessageSelector<2_u32>`
